apps/base/default/homepage/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage-service
  namespace: default
  labels:
    app.kubernetes.io/name: homepage
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: http # not 3000?
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: homepage
